[project]
name = "lr-scheduler-viz"
version = "0.1.0"
description = "Visualize PyTorch builtin learning rate schedulers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
    "streamlit>=1.39.0",
    "torch>=2.5.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
